--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,37 +1,15 @@
 body {
-  margin: 0;
+	margin: 0;
 }
-.block1 {
-  width: 100vw;
-  height: 100vh;
-  background-color: cadetblue;
-  display: flex;
-  align-items: center;
-}
-
-.poster {
-  border: 2px solid green;
-  border-radius: 6px;
-}
-
-.block2 {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.block {
-  height: 200px;
-  display: flex;
-  align-items: center;
-  overflow: hidden;
-  &__img1 {
-    background-color: aquamarine;
-    width: 30vw;
-  }
-  &__img2 {
-    background-color: cyan;
-    width: 30vw;
-  }
+.links {
+	display: flex;
+	background-color: aquamarine;
+	justify-content: space-around;
+	&__item {
+		background-color: bisque;
+		border: 1px solid black;
+		text-decoration: none;
+		color: black;
+		font-size: 30px;
+	}
 }
